调整领域model包至项目内，根据基础接口调整service实现